tests/build/cases/impl_ui_node/delegate_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> cases/impl_ui_node/delegate_expr_error_incorrect_type.rs:9:27
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  | --------------------------^--------------------------------------------
  | |                         |
  | |                         the trait `UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNode`:
            AdoptiveChildNode
            AdoptiveNode<U>
            Box<(dyn UiNodeBoxed + 'static)>
            Box<(dyn WidgetBoxed + 'static)>
            DynWidgetNode
            FillUiNode
            MyNode
            NilUiNode
          and 133 others

error[E0277]: the trait bound `NotANode: UiNode` is not satisfied
 --> cases/impl_ui_node/delegate_expr_error_incorrect_type.rs:9:55
  |
9 | #[impl_ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  | ------------------------------------------------------^----------------
  | |                                                     |
  | |                                                     the trait `UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNode`:
            AdoptiveChildNode
            AdoptiveNode<U>
            Box<(dyn UiNodeBoxed + 'static)>
            Box<(dyn WidgetBoxed + 'static)>
            DynWidgetNode
            FillUiNode
            MyNode
            NilUiNode
          and 133 others
